--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -733,26 +733,82 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Dn4-Yk-wti"/>
                                 </connections>
                             </textView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I2Y-ue-wS3">
+                                <rect key="frame" x="190" y="20" width="130" height="150"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Eo-B9-pba">
+                                        <rect key="frame" x="20" y="10" width="90" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="90" id="beD-dK-W9q"/>
+                                            <constraint firstAttribute="height" constant="30" id="cCW-aG-MC0"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="Contact">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="tappedAddNewContact:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bTI-UH-0ga"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CwK-NR-nBO">
+                                        <rect key="frame" x="20" y="60" width="90" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="Group"/>
+                                        <connections>
+                                            <action selector="tappedAddNewgroup:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZjL-5w-73n"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TRW-2h-DQd">
+                                        <rect key="frame" x="20" y="110" width="90" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="Location"/>
+                                        <connections>
+                                            <action selector="tappedAddNewLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Klb-KN-NB0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="0.70028895547945202" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="5m7-RI-dVU"/>
+                                    <constraint firstAttribute="height" constant="150" id="8Ya-8c-wxR"/>
+                                    <constraint firstItem="TRW-2h-DQd" firstAttribute="top" secondItem="CwK-NR-nBO" secondAttribute="bottom" constant="20" id="DaW-pj-TEX"/>
+                                    <constraint firstItem="9Eo-B9-pba" firstAttribute="centerX" secondItem="I2Y-ue-wS3" secondAttribute="centerX" id="Df5-s3-YDw"/>
+                                    <constraint firstItem="TRW-2h-DQd" firstAttribute="height" secondItem="9Eo-B9-pba" secondAttribute="height" id="Fh0-iE-yeG"/>
+                                    <constraint firstItem="TRW-2h-DQd" firstAttribute="width" secondItem="9Eo-B9-pba" secondAttribute="width" id="HaF-o4-DfZ"/>
+                                    <constraint firstItem="TRW-2h-DQd" firstAttribute="centerX" secondItem="9Eo-B9-pba" secondAttribute="centerX" id="M5K-c4-mvi"/>
+                                    <constraint firstItem="9Eo-B9-pba" firstAttribute="top" secondItem="I2Y-ue-wS3" secondAttribute="top" constant="10" id="czM-th-NC5"/>
+                                    <constraint firstItem="CwK-NR-nBO" firstAttribute="width" secondItem="9Eo-B9-pba" secondAttribute="width" id="ecu-qY-7Hg"/>
+                                    <constraint firstItem="CwK-NR-nBO" firstAttribute="height" secondItem="9Eo-B9-pba" secondAttribute="height" id="p36-4S-HRs"/>
+                                    <constraint firstItem="CwK-NR-nBO" firstAttribute="top" secondItem="9Eo-B9-pba" secondAttribute="bottom" constant="20" id="sTI-g8-yW5"/>
+                                    <constraint firstItem="CwK-NR-nBO" firstAttribute="centerX" secondItem="9Eo-B9-pba" secondAttribute="centerX" id="ut2-fv-rwI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <constraints>
                             <constraint firstItem="kjJ-rK-kCH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="D3k-fT-h99"/>
                             <constraint firstItem="7J1-bL-8zx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gwo-5h-Aha"/>
+                            <constraint firstItem="I2Y-ue-wS3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Hf1-aW-MKP"/>
                             <constraint firstItem="EN0-G1-lHx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="Qy5-hM-fbh"/>
                             <constraint firstAttribute="trailing" secondItem="7J1-bL-8zx" secondAttribute="trailing" id="gOS-pd-Jlb"/>
                             <constraint firstAttribute="trailing" secondItem="kjJ-rK-kCH" secondAttribute="trailing" constant="10" id="itS-58-O3c"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7J1-bL-8zx" secondAttribute="bottom" id="oTO-LX-its"/>
+                            <constraint firstAttribute="trailing" secondItem="I2Y-ue-wS3" secondAttribute="trailing" id="uF8-BK-5Tx"/>
                             <constraint firstItem="EN0-G1-lHx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="zyL-xI-wdq"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addContactButton" destination="9Eo-B9-pba" id="RD3-UX-Wht"/>
+                        <outlet property="addGroupButton" destination="CwK-NR-nBO" id="Jbm-1I-uPP"/>
+                        <outlet property="addLocationButton" destination="TRW-2h-DQd" id="ML5-Hk-vxu"/>
                         <outlet property="addNewLocationNameTextView" destination="kjJ-rK-kCH" id="fX6-I2-Tlh"/>
                         <outlet property="allowUpdateLocationSwitch" destination="EN0-G1-lHx" id="KCk-Wx-g5b"/>
                         <outlet property="bannerView" destination="7J1-bL-8zx" id="dOX-e0-by1"/>
+                        <outlet property="menuView" destination="I2Y-ue-wS3" id="nl3-Ms-rvH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4" y="117"/>
+            <point key="canvasLocation" x="-5.625" y="116.19718309859155"/>
         </scene>
         <!--Contact View Controller-->
         <scene sceneID="WFo-lW-5G6">
@@ -774,7 +830,7 @@
                                 </constraints>
                                 <segments>
                                     <segment title="Contacts"/>
-                                    <segment title="Contact Request"/>
+                                    <segment title="Requests"/>
                                 </segments>
                                 <color key="tintColor" red="0.19539620539999999" green="0.64670758930000005" blue="0.85485491069999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
